@@ -1,5 +1,5 @@
 /*
-Copyright (c) 1995-2021 held by the author(s) .  All rights reserved.
+Copyright (c) 1995-2022 held by the author(s) .  All rights reserved.
  
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
@@ -34,6 +34,8 @@ POSSIBILITY OF SUCH DAMAGE.
 
 package org.web3d.x3d.actions;
 
+import java.awt.Desktop;
+import java.net.URI;
 import java.net.URL;
 import org.openide.awt.ActionID;
 import org.openide.awt.ActionReference;
@@ -71,7 +73,11 @@ public final class LaunchWeb3DConferenceAcmDigitalLibraryAction extends Callable
   }
   protected static void showInBrowser(String urlString) throws Exception
   {
-    HtmlBrowser.URLDisplayer.getDefault().showURL(new URL(urlString));
+    // HtmlBrowser.URLDisplayer.getDefault().showURL(new URL(urlString));
+      
+    // https://stackoverflow.com/questions/5226212/how-to-open-the-default-webbrowser-using-java
+    if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE))
+        Desktop.getDesktop().browse(new URI(urlString));
   }
 
   @Override
